--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,8 @@
         "league/uri": "^4",
         "nesbot/carbon": "~1.22",
         "php": ">=7.0",
-        "symfony/css-selector": "~3",
-        "symfony/dom-crawler": "~3"
+        "symfony/css-selector": "^4",
+        "symfony/dom-crawler": "^4"
     },
     "require-dev": {
         "phpunit/phpunit": "~6",
